# Laser-to-G-code

./: .gitignore  README.md  bitmapviewer.cpp  bitmapviewer.h  bitmapviewer.ui  capture.cpp  capture.h  circlevisualizer.cpp  circlevisualizer.h  converter.cpp  converter.h  imageviewer.cpp  imageviewer.h  laser-to-g-code.pro  laser-to-g-code.pro.user.bb63a93  lightfinder.cpp  lightfinder.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  recorder.cpp  recorder.h
cpp/: CMakeLists.txt  main.cpp
